@@ -109,11 +109,13 @@ STRING  Target grid description file or name
 
 
 @BeginEnvironment
-@Item = CDO_REMAP_NORMALIZE_OPT
-This variable is used to choose the normalization of the conservative 
-interpolation. By default @env{CDO_REMAP_NORMALIZE_OPT} is set to 'fracarea' and will
-include the destination area fraction in the output weights; other 
-options are 'none' and 'destarea' (for more information see \cite{SCRIP}).
+@Item = CDO_REMAP_NORM
+This variable is used to choose the normalization of the conservative interpolation. 
+By default @env{CDO_REMAP_NORM} is set to 'fracarea'. 'fracarea' uses the sum of the
+non-masked source cell intersected areas to normalize each target cell field value.
+This results in a reasonable flux value but the flux is not locally conserved.
+The option 'destarea' uses the total target cell area to normalize each target cell
+field value. Local flux conservation is ensured, but unreasonable flux values may result.
 @Item = REMAP_EXTRAPOLATE
 This variable is used to switch the extrapolation feature 'on' or 'off'.
 By default the extrapolation is enabled for remapdis, remapnn
@@ -127,9 +129,8 @@ Remap search radius in degree, default 180 degree.
 
 
 @BeginNote
-For this module the author has converted the original Fortran 90 SCRIP 
-software to ANSI C99. If there are any problems send a bug report to CDO and
-not to SCRIP!
+For this module the author has converted the original Fortran 90 SCRIP software to 
+ANSI C99. If there are any problems send a bug report to CDO and not to SCRIP!
 @EndNote
 
 
