@@ -3336,11 +3336,13 @@ static char *RemapgridHelp[] = {
     "    grid  STRING  Target grid description file or name",
     "",
     "ENVIRONMENT",
-    "    CDO_REMAP_NORMALIZE_OPT",
-    "        This variable is used to choose the normalization of the conservative ",
-    "        remapping. By default @env{CDO_REMAP_NORMALIZE_OPT} is set to 'fracarea' and will",
-    "        include the destination area fraction in the output weights; other ",
-    "        options are 'none' and 'destarea' (for more information see {SCRIP}).",
+    "    CDO_REMAP_NORM         ",
+    "        This variable is used to choose the normalization of the conservative interpolation. ",
+    "        By default @env{CDO_REMAP_NORM} is set to 'fracarea'. 'fracarea' uses the sum of the",
+    "        non-masked source cell intersected areas to normalize each target cell field value.",
+    "        This results in a reasonable flux value but the flux is not locally conserved.",
+    "        The option 'destarea' uses the total target cell area to normalize each target cell",
+    "        field value. Local flux conservation is ensured, but unreasonable flux values may result.",
     "    REMAP_EXTRAPOLATE      ",
     "        This variable is used to switch the extrapolation feature 'on' or 'off'.",
     "        By default the extrapolation is enabled for remapdis, remapnn and for circular grids.",
@@ -3403,11 +3405,13 @@ static char *GenweightsHelp[] = {
     "    grid  STRING  Target grid description file or name",
     "",
     "ENVIRONMENT",
-    "    CDO_REMAP_NORMALIZE_OPT",
-    "        This variable is used to choose the normalization of the conservative ",
-    "        interpolation. By default @env{CDO_REMAP_NORMALIZE_OPT} is set to 'fracarea' and will",
-    "        include the destination area fraction in the output weights; other ",
-    "        options are 'none' and 'destarea' (for more information see {SCRIP}).",
+    "    CDO_REMAP_NORM         ",
+    "        This variable is used to choose the normalization of the conservative interpolation. ",
+    "        By default @env{CDO_REMAP_NORM} is set to 'fracarea'. 'fracarea' uses the sum of the",
+    "        non-masked source cell intersected areas to normalize each target cell field value.",
+    "        This results in a reasonable flux value but the flux is not locally conserved.",
+    "        The option 'destarea' uses the total target cell area to normalize each target cell",
+    "        field value. Local flux conservation is ensured, but unreasonable flux values may result.",
     "    REMAP_EXTRAPOLATE      ",
     "        This variable is used to switch the extrapolation feature 'on' or 'off'.",
     "        By default the extrapolation is enabled for remapdis, remapnn",
@@ -3419,9 +3423,8 @@ static char *GenweightsHelp[] = {
     "        Remap search radius in degree, default 180 degree.",
     "",
     "NOTE",
-    "    For this module the author has converted the original Fortran 90 SCRIP ",
-    "    software to ANSI C99. If there are any problems send a bug report to CDO and",
-    "    not to SCRIP!",
+    "    For this module the author has converted the original Fortran 90 SCRIP software to ",
+    "    ANSI C99. If there are any problems send a bug report to CDO and not to SCRIP!",
     NULL
 };
 
@@ -3445,11 +3448,13 @@ static char *RemapHelp[] = {
     "    weights  STRING  Interpolation weights (SCRIP netCDF file)",
     "",
     "ENVIRONMENT",
-    "    CDO_REMAP_NORMALIZE_OPT",
-    "        This variable is used to choose the normalization of the conservative ",
-    "        interpolation. By default @env{CDO_REMAP_NORMALIZE_OPT} is set to 'fracarea' and will",
-    "        include the destination area fraction in the output weights; other ",
-    "        options are 'none' and 'destarea' (for more information see {SCRIP}).",
+    "    CDO_REMAP_NORM         ",
+    "        This variable is used to choose the normalization of the conservative interpolation. ",
+    "        By default @env{CDO_REMAP_NORM} is set to 'fracarea'. 'fracarea' uses the sum of the",
+    "        non-masked source cell intersected areas to normalize each target cell field value.",
+    "        This results in a reasonable flux value but the flux is not locally conserved.",
+    "        The option 'destarea' uses the total target cell area to normalize each target cell",
+    "        field value. Local flux conservation is ensured, but unreasonable flux values may result.",
     "    REMAP_EXTRAPOLATE      ",
     "        This variable is used to switch the extrapolation feature 'on' or 'off'.",
     "        By default the extrapolation is enabled for remapdis, remapnn and for circular grids.",
@@ -3460,9 +3465,8 @@ static char *RemapHelp[] = {
     "        Remap search radius in degree, default 180 degree.",
     "",
     "NOTE",
-    "    For this module the author has converted the original Fortran 90 SCRIP ",
-    "    software to ANSI C99. If there are any problems send a bug report to CDO and",
-    "    not to SCRIP!",
+    "    For this module the author has converted the original Fortran 90 SCRIP software to",
+    "    ANSI C99. If there are any problems send a bug report to CDO and not to SCRIP!",
     NULL
 };
 
